# baxter_imp

./: CMakeLists.txt  INSTRUCTION.txt  package.xml  setup.py
action/: MoveAndContact.action
launch/: background.launch  demo.launch  left_planner.launch  planners.launch  right_planner.launch  sensors.launch  use_my_grippers.sh
msg/: ArmTrajectory.msg  SensorDisp.msg  SetBoundsMsg.msg
scripts/: ExploreNoSym.py  ExploreSym.py  joint_trajectory_client.py  motion_planner.py  tactile_sensor.py
src/baxter_imp/: GPutil.py  __init__.py
srv/: PlannerService.srv
xacros/: custom.xacro  joint_limits.yaml  left_end_effector.urdf.xacro  reset script  right_end_effector.urdf.xacro  tips.xacro
